--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Offset/OffsetBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Offset/OffsetBehaviorPage.xaml
@@ -11,7 +11,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Image x:Name="ToolkitLogo" Source="ms-appx:///Assets/UWPCommunityToolkitSampleAppStoreLogo.scale-150.png" Height="100" Width="100" >
+        <Image x:Name="ToolkitLogo" Source="ms-appx:///Assets/ToolkitLogo.png" Height="100" Width="100" >
             <interactivity:Interaction.Behaviors>
                 <behaviors:Offset x:Name="Offset" 
                                   OffsetX="{Binding OffsetX.Value, Mode=TwoWay}" 
