--- a/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
@@ -9,6 +9,7 @@
         <Setter Property="VerticalAlignment" Value="Stretch"></Setter>
         <Setter Property="Background" Value="White"></Setter>
         <Setter Property="ActivationWidth" Value="80"></Setter>
+        <Setter Property="IsOffsetLimited" Value="True"></Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:SlidableListItem">
