--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MicrosoftGraph Service/MicrosoftGraphPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MicrosoftGraph Service/MicrosoftGraphPage.xaml
@@ -2,7 +2,7 @@
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.MicrosoftGraphPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.MicrosoftGraph_Service"
+    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -50,8 +50,8 @@
 
                         <StackPanel x:Name="ClientIdBox" Orientation="Vertical" Margin="24,24,24,21" Grid.Row="1">
                             <TextBox Header="Client Id:" x:Name="ClientId" Margin="0,0,0,12"/>
-                            <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
-                            <Button Content="Logout" x:Name="LogOutButton" Click="LogOutButton_Click" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
+                            <Button Content="Sign in" x:Name="ConnectButton" Click="ConnectButton_Click" Margin="0,10,0,0" VerticalAlignment="Bottom" Width="75"></Button>
+                            <Button Content="Sign out" x:Name="LogOutButton" Click="LogOutButton_Click" Margin="0,10,0,0" VerticalAlignment="Bottom" Width="75"></Button>
                         </StackPanel>
                         
                     </Grid>
@@ -104,7 +104,7 @@
                             <Button Content="Send Message" x:Name="SendMessageButton" Margin="0,20,0,0" Click="SendMessageButton_Click" Width="148"/>
                         </StackPanel>
                     </Grid>
-         <ListView x:Name="MessagesList" Grid.Row="3" IncrementalLoadingThreshold="1" IncrementalLoadingTrigger="Edge">
+         <ListView x:Name="MessagesList" Grid.Row="3" IncrementalLoadingThreshold="1" IncrementalLoadingTrigger="Edge" Margin="10,0">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
