--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
 
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{StaticResource Brush-Grey-05}" Padding="48">
         <Grid.RowDefinitions>
             <RowDefinition MinHeight="100"></RowDefinition>
             <RowDefinition Height="11"></RowDefinition>
@@ -20,18 +20,78 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="0" TextWrapping="Wrap" Margin="12,0">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect with ColumnDefinition MinWidth="200" and MinHeight="100"</TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" Margin="12,0">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
-        <TextBlock Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" Margin="12,0">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
+        <Rectangle Grid.Column="0" 
+                   Grid.Row="0" 
+                   Fill="{StaticResource Brush-White}" 
+                   Stroke="{StaticResource Brush-Grey-04}" 
+                   StrokeThickness="1"/>
+        <Rectangle Grid.Column="1" 
+                   Grid.Row="0" 
+                   Fill="{StaticResource Brush-White}" 
+                   Stroke="{StaticResource Brush-Grey-04}"
+                   StrokeThickness="1"/>
+        <Rectangle Grid.Column="2" 
+                   Grid.Row="0" 
+                   Fill="{StaticResource Brush-White}" 
+                   Stroke="{StaticResource Brush-Grey-04}" 
+                   StrokeThickness="1"/>
+        <Rectangle Grid.Column="0" 
+                   Grid.Row="2" 
+                   Fill="{StaticResource Brush-White}" 
+                   Stroke="{StaticResource Brush-Grey-04}" 
+                   StrokeThickness="1"/>
+        <Rectangle Grid.Column="1" 
+                   Grid.Row="2" 
+                   Fill="{StaticResource Brush-White}" 
+                   Stroke="{StaticResource Brush-Grey-04}" 
+                   StrokeThickness="1"/>
+        <Rectangle Grid.Column="2" 
+                   Grid.Row="2" 
+                   Fill="{StaticResource Brush-White}" 
+                   Stroke="{StaticResource Brush-Grey-04}" 
+                   StrokeThickness="1"/>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="2" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
-        <TextBlock Grid.Column="2" Grid.Row="2" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
+        <TextBlock Grid.Column="0" 
+                   TextWrapping="Wrap" 
+                   Margin="12,12">
+            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect with ColumnDefinition MinWidth="200" and MinHeight="100"
+        </TextBlock>
+        <TextBlock Grid.Column="1" 
+                   Grid.Row="0" 
+                   TextWrapping="Wrap"
+                   Margin="12,12">
+            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+        </TextBlock>
+        <TextBlock Grid.Column="2" 
+                   Grid.Row="0" 
+                   TextWrapping="Wrap" 
+                   Margin="12,12">
+            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+        </TextBlock>
+
+        <TextBlock Grid.Column="0"
+                   Grid.Row="2" 
+                   TextWrapping="Wrap"
+                   Margin="12,12">
+            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+        </TextBlock>
+        <TextBlock Grid.Column="1" 
+                   Grid.Row="2" 
+                   TextWrapping="Wrap" 
+                   Margin="12,12">
+            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+        </TextBlock>
+        <TextBlock Grid.Column="2"
+                   Grid.Row="2"
+                   TextWrapping="Wrap"
+                   Margin="12,12">
+            This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect
+        </TextBlock>
 
         <!--Column Grid Splitter-->
         <controls:GridSplitter 
                 Width="11"
-                Background="Gray"
+                Background="{StaticResource Brush-Grey-04}"
                 HorizontalAlignment="{Binding HorizontalAlignment.Value,Mode=TwoWay}"
                 Grid.Column="{Binding Column.Value}"
                 ResizeDirection="{Binding ResizeDirection.Value,Mode=TwoWay}"
@@ -41,7 +101,8 @@
         <!--Row Grid Splitter-->
         <controls:GridSplitter 
             Grid.Row="1"
-            Background="Gray"
+            Grid.ColumnSpan="3"
+            Background="{StaticResource Brush-Grey-04}"
             Height="11"
             HorizontalAlignment="Stretch" >
             <controls:GridSplitter.Element>
