--- a/Microsoft.Toolkit.Uwp.UI.Controls/DropShadowPanel/DropShadowPanel.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/DropShadowPanel/DropShadowPanel.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Microsoft.Toolkit.Uwp.UI.Controls.CompositionShadow"
+    x:Class="Microsoft.Toolkit.Uwp.UI.Controls.DropShadowPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
