--- a/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Shell.xaml
@@ -19,13 +19,12 @@
     <Page.Resources>
         <DataTemplate x:Key="ButtonTemplate"
                       x:DataType="local:SampleCategory">
-            <Grid Width="240"
-                  Height="48">
+            <Grid Width="240">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="48" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Margin="12"
+                <Image Margin="12" 
                        Source="{x:Bind Icon}"
                        Stretch="Uniform" />
                 <TextBlock Grid.Column="1"
